@@ -7,8 +7,9 @@ import 'package:font_awesome_flutter/font_awesome_flutter.dart';
 import 'package:enavit/services/services.dart';
 
 class ViewProfile extends StatefulWidget {
-  final Users user;  
-  const ViewProfile({super.key, required this.user});
+  final Users user;
+  final String setType;  
+  const ViewProfile({super.key, required this.user, required this.setType});
 
   @override
   State<ViewProfile> createState() => _ViewProfileState();
@@ -17,6 +18,8 @@ class ViewProfile extends StatefulWidget {
 class _ViewProfileState extends State<ViewProfile> {
 
   late Map<String,dynamic> currentUserData = {};
+  late Club ClubData;
+  late List<Event> events = [];
 
   @override
   void initState() {
@@ -29,9 +32,13 @@ class _ViewProfileState extends State<ViewProfile> {
     currentUserData = jsonDecode(
         await secureStorage.reader(key: "currentUserData") ?? "null");
 
+    Services service = Services();
+    ClubData = await service.getClubData(currentUserData['clubIds'][0]);
+    events = await service.getClubEvents(ClubData.clubId);    
+  
   }
 
-  Future RemovefromClub() async {
+  Future removefromOrganiser() async {
     Services service = Services();
 
     Map<String, dynamic> newinfo = {
@@ -42,18 +49,81 @@ class _ViewProfileState extends State<ViewProfile> {
     await service.updateUser(widget.user.userId, newinfo);
 
     print("Removed from Club");
-    Navigator.pushNamed(context, '/set_role');
+    Navigator.pushNamed(context, '/set_role_index');
   }
   
-  Future AddToClub() async {
-    
+  Future addtoOrganiser() async {
     Services service = Services();
-    
     Map<String, dynamic> newinfo = {'clubIds': currentUserData['clubIds'], 'clubs': currentUserData['clubIds'], 'role': 1};
     await service.updateUser(widget.user.userId, newinfo);
     print("Added to Club");
+    Navigator.pushNamed(context, '/set_role_index');
+  }
+
+  Future setCaptain() async {
+    Services service = Services();
+  
+    Map<String, dynamic> newinfoUser = {
+      'clubIds': currentUserData['clubIds'],
+      'clubs': currentUserData['clubIds'],
+      'role': 1
+    };
+
+    List<String> approvers = List<String>.from(ClubData.approvers);
+    if (approvers.length == 1) {
+      approvers.add("null");
+      approvers[1] = widget.user.userId;
+    } else {
+      approvers[1] = widget.user.userId;
+    }
+
+    Map<String,dynamic> newinfoClub = {
+      'approvers' : approvers
+    };
+
+    await service.updateUser(widget.user.userId, newinfoUser);
+    await service.updateClub(ClubData.clubId, newinfoClub);
+    print("Set as Captain");
     
-    Navigator.pushNamed(context, '/set_role');
+    Navigator.pushNamed(context, '/captain_setRole');
+    
+  }
+
+  Future removeCaptain() async {
+    
+    Services service = Services();
+
+    Map<String, dynamic> newinfoUser = {
+      'clubIds': [],
+      'clubs': [],
+      'role': 3
+    };
+
+    List<String> approvers = List<String>.from(ClubData.approvers);
+    approvers[1] = "null";
+
+    Map<String, dynamic> newinfoClub = {'approvers': approvers};
+
+    await service.updateUser(widget.user.userId, newinfoUser);
+    await service.updateClub(ClubData.clubId, newinfoClub);
+    print("Remove as Captain");
+    Navigator.pushNamed(context, '/captain_setRole');
+  }
+
+  Future addClubMember() async {
+    Services service = Services();
+    Map<String, dynamic> newinfo = {'role': 1};
+    await service.updateUser(widget.user.userId, newinfo);
+    print("Added as Club Member");
+    Navigator.pushNamed(context, '/set_role_index');
+  }
+
+  Future removeClubMember() async {
+    Services service = Services();
+    Map<String, dynamic> newinfo = {'role': 3};
+    await service.updateUser(widget.user.userId, newinfo);
+    print("Removed as Club Member");
+    Navigator.pushNamed(context, '/set_role_index');
   }
 
   @override
@@ -126,7 +196,7 @@ class _ViewProfileState extends State<ViewProfile> {
                 const Divider(),
                 const SizedBox(height: 15),
                 Text(
-                  'Role: ${widget.user.role == 1 ? 'Organizer' : 'Participant'}',
+                  'Role: ${widget.user.role == 1 ? 'Captain/Memeber' : widget.user.role == 2 ? 'Organised Events' : 'Participant' }',
                   style: const TextStyle(
                     fontSize: 20,
                     fontWeight: FontWeight.w600,
@@ -145,21 +215,49 @@ class _ViewProfileState extends State<ViewProfile> {
 
                 const SizedBox(height: 15),
 
-                currentUserData['clubIds'].contains(widget.user.clubIds.isEmpty ? 'NOCLUB' : widget.user.clubIds[0] ) && widget.user.role == 1 ? 
+                currentUserData['clubIds'].contains(widget.user.clubIds.isEmpty ? 'NOCLUB' : widget.user.clubIds[0] ) && widget.user.role == 1 && widget.setType == "Set Captain" ? 
                 ElevatedButton(onPressed:  () {
-                  RemovefromClub();
+
+                  removeCaptain();
+                  
                 }, 
-                child: const Text("Remove from Club")) 
+                child: const Text("Remove as Captain")) 
                 : 
-                widget.user.role == 2 ? 
+                ((widget.user.role == 2 || widget.user.role == 3) && ClubData.approvers[1] == "null" && widget.setType == "Set Captain")  ? 
                 ElevatedButton(onPressed:  () {
-                  AddToClub();
+                  setCaptain();
                 },
-                child: const Text("Add to Club")) 
+                child: const Text("Set as Captain")) 
                 :
                 const SizedBox(),
+
+                !(currentUserData['clubIds'].contains(widget.user.clubIds.isEmpty ? 'NOCLUB' : widget.user.clubIds[0] ) ) && (widget.user.role == 3 || widget.user.role == 2) && widget.setType == "Set Event Organiser" 
+                ?
+                ElevatedButton(onPressed:  () {
+                  print("create new page for organiser");
+                },
+                child: const Text("Add as organiser to an Event"))
+                :
+
+                events.toSet().intersection(widget.user.organizedEvents.toSet()).isNotEmpty ?
+                ElevatedButton(onPressed:  () {
+                  print("remvove from organiser");
+                },
+                child: const Text("Remove Event from Organiser"))
+
+                : 
+                Container(
+                  decoration: BoxDecoration(
+                    color: const Color.fromARGB(255, 0, 0, 0),
+                    borderRadius: BorderRadius.circular(10),
+                  ),
+                  height: 50,
+                  width: 50,
+                ),
+
+
                 
-              ],
+              ],  
             ),
           ),
         ),
